11. Separate list/grid preference for home screen.
12. Set max width of 1000px for information in browse view.
13. Always use frosted background for queue in desktop layout when not pinned.
14. In desktop layout, always show queue above now-playing if now-platying is
    expanded - regardless of whether queue is pinned or not.
15. Add icon map for xPlay.

5.11.5
------
1. Add 'Play shuffled' to genres and years.
2. Don't try to get mtime of playlists imported from streaming services -
   thanks to SamY.

5.11.4
------
1. Fix listing random mixes on macOS - thanks to EelcoV.
2. Don't sort search results, use order as supplied from LMS.
3. Fix other apps showing in 'TuneIn' when set to combine radio and apps.

5.11.3
------
1. Add 'Play shuffled' for remote playlists.
2. Fix disabling of playlist images.
3. Add emblem for 'iBroadcast'.
4. Fix/work-around issues with using Default for server-settings when LMS is
   on piCorePlayer.

5.11.2
------
1. Update icon mapping for 'LyrPlay' due to its 'Model' change.
2. Fix scan progress page when opening from 'Information' dialog.
3. Fix update details page.
4. Show track ratings in playlists.

5.11.1
------
1. Improve accuracy of list 'Scroll to'.
2. Remove 'Del' shortcut, as its breaking A-Z jumplist.
3. Use 'apple' icon for 'LyrPlay'.
4. Fix/work-around issues with using Default for server-settings and having
   custom actions.

5.11.0
------
 1. Add support for extended meta-data in SlimBrowse commands.
 2. Move 'Sleep all' and 'Create group player' into menu of 'Manager players'
    dialog.
 3. Add 'Clear queue', 'Switch off', and 'Switch on' for all players in menu
    of 'Manager players' dialog.
 4. If using playlist images, then add an overlay icon top-left for favourited
    playlists.
 5. Enable playlist images by default.
 6. Default to grid view.
 7. Re-add notification support, removed in 4.0.0, as used by some plugins.
 8. Click on MAI header to show a 'Scroll to' dialog allowing to scroll to